# Support for split-debuginfo [should eventually](https://github.com/rust-lang/rust/issues/34651) land,
# hopefully giving us an out-of-the-box way to separate the code from the debugging information.
# We should use the "objcopy --only-keep-debug" and "add-symbol-file" meanwhile
# and separating stack tracing into raw trace and symbolication parts.

[package]
name = "mm2_main"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/mm2.rs"
doctest = false

[features]
custom-swap-locktime = [] # only for testing purposes, should never be activated on release builds.
native = [] # Deprecated
track-ctx-pointer = ["common/track-ctx-pointer"]
zhtlc-native-tests = ["coins/zhtlc-native-tests"]
tron-network-tests = ["coins/tron-network-tests"]
run-docker-tests = ["coins/run-docker-tests"]
# Split docker test features - organized by test category
#
# Chain-specific tests: Test coin implementations for specific blockchain protocols
# (consideration: move to coins::*/tests; far future: separate crates per chain)
docker-tests-slp = ["run-docker-tests"]         # BCH-SLP coin tests
docker-tests-sia = ["run-docker-tests"]         # Sia coin tests
docker-tests-eth = ["run-docker-tests"]         # ETH/ERC20 coin tests
docker-tests-qrc20 = ["run-docker-tests"]       # QRC20 coin tests
docker-tests-tendermint = ["run-docker-tests"]  # Tendermint/IBC coin tests
docker-tests-zcoin = ["run-docker-tests"]       # ZCoin/Zombie coin tests
#
# Protocol tests: Test cross-cutting protocol functionality (swaps, ordermatching, watchers).
# Protocol logic is coin-agnostic; these tests use UTXO coins to verify protocol correctness in isolation.
docker-tests-swaps = ["run-docker-tests"]       # Swap protocol tests (v1, v2, confs, file-locks)
docker-tests-ordermatch = ["run-docker-tests"]  # Orderbook and matching tests
docker-tests-watchers = ["run-docker-tests"]    # Watcher node tests (UTXO-only, stable)
docker-tests-watchers-eth = ["docker-tests-watchers", "coins/enable-eth-watchers"]  # Watcher tests (ETH, unstable)
#
# Cross-chain integration tests: Test interactions between different chain families
docker-tests-integration = ["run-docker-tests"]
# Aggregate feature for local development - runs all docker test suites
# Not recommended for CI (use split jobs instead for parallelism)
docker-tests-all = [
    "docker-tests-eth",
    "docker-tests-slp",
    "docker-tests-sia",
    "docker-tests-ordermatch",
    "docker-tests-swaps",
    "docker-tests-watchers",
    "docker-tests-qrc20",
    "docker-tests-tendermint",
    "docker-tests-zcoin",
    "docker-tests-integration",
]
# utxo-walletconnect excluded: it requires the `bitcoin` crate which pulls secp256k1-sys v0.6.1,
# conflicting with v0.4.2 from existing deps and causing duplicate WASM symbol linker errors.
default = []
utxo-walletconnect = ["coins/utxo-walletconnect", "coins_activation/utxo-walletconnect"]
trezor-udp = ["crypto/trezor-udp"] # use for tests to connect to trezor emulator over udp
run-device-tests = []
test-ext-api = ["trading_api/test-ext-api"]
new-db-arch = ["mm2_core/new-db-arch"] # A temporary feature to integrate the new db architecture incrementally
# Temporary feature for implementing IBC wrap/unwrap mechanism and will be removed
# once we consider it as stable.
ibc-routing-for-swaps = []
for-tests = []

[dependencies]
async-std = { workspace = true, features = ["unstable"] }
async-trait.workspace = true
bitcrypto = { path = "../mm2_bitcoin/crypto" }
blake2.workspace = true
bytes.workspace = true
cfg-if.workspace = true
chain = { path = "../mm2_bitcoin/chain", default-features = false, features = ["ext-bitcoin"] }
chrono.workspace = true
clap.workspace = true
coins = { path = "../coins", default-features = false }
coins_activation = { path = "../coins_activation", default-features = false }
common = { path = "../common" }
compatible-time.workspace = true
crc32fast.workspace = true
crossbeam.workspace = true
crypto = { path = "../crypto" }
db_common = { path = "../db_common" }
derive_more.workspace = true
either.workspace = true
ethereum-types.workspace = true
enum_derives = { path = "../derives/enum_derives" }
enum-primitive-derive.workspace = true
futures01.workspace = true
futures = { workspace = true, features = ["compat", "async-await"] }
gstuff.workspace = true
hash256-std-hasher.workspace = true
hash-db.workspace = true
hex.workspace = true
http.workspace = true
hw_common = { path = "../hw_common" }
itertools.workspace = true
kdf_walletconnect = { path = "../kdf_walletconnect" }
keys = { path = "../mm2_bitcoin/keys" }
lazy_static.workspace = true
# ledger = { path = "../ledger" }
libc.workspace = true
mm2_core = { path = "../mm2_core" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_event_stream = { path = "../mm2_event_stream" }
mm2_gui_storage = { path = "../mm2_gui_storage" }
mm2_io = { path = "../mm2_io" }
mm2_libp2p = { path = "../mm2_p2p", package = "mm2_p2p" }
mm2_metrics = { path = "../mm2_metrics" }
mm2_net = { path = "../mm2_net"}
mm2_number = { path = "../mm2_number" }
mm2_rpc = { path = "../mm2_rpc", features = ["rpc_facilities"] }
mm2_state_machine = { path = "../mm2_state_machine" }
trading_api = { path = "../trading_api" }
num-traits.workspace = true
parking_lot = { workspace = true }
primitives = { path = "../mm2_bitcoin/primitives" }
primitive-types.workspace = true
prost.workspace = true
rand = { workspace = true, features = ["std", "small_rng"] }
rand6 = { version = "0.6", package = "rand" }
rmp-serde.workspace = true
rpc = { path = "../mm2_bitcoin/rpc" }
rpc_task = { path = "../rpc_task" }
script = { path = "../mm2_bitcoin/script" }
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
serde_derive.workspace = true
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serialization = { path = "../mm2_bitcoin/serialization" }
serialization_derive = { path = "../mm2_bitcoin/serialization_derive" }
spv_validation = { path = "../mm2_bitcoin/spv_validation" }
sp-runtime-interface.workspace = true
sp-trie.workspace = true
tempfile.workspace = true
trie-db.workspace = true
trie-root.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Forces `wasm-bindgen` feature on transitive `instant` dep for WASM builds.
# See mm2src/coins/Cargo.toml for detailed explanation.
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys.workspace = true
mm2_db = { path = "../mm2_db" }
mm2_test_helpers = { path = "../mm2_test_helpers" }
timed-map = { workspace = true, features = ["rustc-hash", "wasm"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-rustls.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server", "tcp"] }
rcgen.workspace = true
rustls = { workspace = true, default-features = false }
rustls-pemfile.workspace = true
timed-map = { workspace = true, features = ["rustc-hash"] }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "net"] }

[target.'cfg(windows)'.dependencies]
winapi.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_os = "windows")))'.dependencies]
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }

[dev-dependencies]
base64.workspace = true
coins = { path = "../coins", default-features = false, features = ["for-tests"] }
coins_activation = { path = "../coins_activation", default-features = false, features = ["for-tests"] }
common = { path = "../common", features = ["for-tests"] }
mm2_test_helpers = { path = "../mm2_test_helpers" }
trading_api = { path = "../trading_api", features = ["for-tests"] }
env_logger.workspace = true
mocktopus.workspace = true
web3 = { workspace = true, default-features = false, features = ["http-rustls-tls"] }
ethabi.workspace = true
rlp.workspace = true
ethcore-transaction.workspace = true
rustc-hex.workspace = true
sia-rust.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# todo: try to use async features
testcontainers = { workspace = true, features = ["blocking"] }
reqwest = { workspace = true, features = ["json"] }

[build-dependencies]
chrono.workspace = true
gstuff.workspace = true
prost-build = { version = "0.12", default-features = false }
regex.workspace = true

