[package]
name = "mm2_metrics"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
base64.workspace = true
common = { path = "../common" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await", "thread-pool"] }
itertools.workspace = true
metrics.workspace = true
metrics-util.workspace = true
mm2_err_handle = { path = "../mm2_err_handle" }
serde.workspace = true
serde_derive.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { workspace = true, features = ["client", "http2", "server", "tcp"] }
# using webpki-tokio to avoid rejecting valid certificates
# got "invalid certificate: UnknownIssuer" for https://ropsten.infura.io on iOS using default-features
hyper-rustls = { workspace = true, default-features = false, features = ["http1", "http2", "webpki-tokio"] }
metrics-exporter-prometheus.workspace = true
