[package]
name = "mm2_rpc"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
common = { path = "../common" }
derive_more.workspace = true
futures = { workspace = true, features = ["compat", "async-await", "thread-pool"], optional = true }
gstuff = { workspace = true, optional = true}
http = { workspace = true, optional = true}
mm2_err_handle = { path = "../mm2_err_handle", optional = true }
mm2_number = { path = "../mm2_number" }
rpc = { path = "../mm2_bitcoin/rpc" }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
ser_error = { path = "../derives/ser_error", optional = true}
ser_error_derive = { path = "../derives/ser_error_derive", optional=true }
uuid.workspace = true

[features]
default = []
rpc_facilities = ["futures", "gstuff", "http", "mm2_err_handle", "ser_error", "ser_error_derive"]
