[package]
name = "mm2_state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
async-trait.workspace = true

[dev-dependencies]
common = { path = "../common" }
futures.workspace = true 
