[package]
name = "mm2_test_helpers"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
bytes = "1.1"
cfg-if = "1.0"
common = { path = "../common" }
crypto = { path = "../crypto" }
db_common = { path = "../db_common" }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
hex = "0.4.2"
http = "0.2"
lazy_static = "1.4"
mm2_core = { path = "../mm2_core" }
mm2_io = { path = "../mm2_io" }
mm2_metrics = { path = "../mm2_metrics" }
mm2_net = { path = "../mm2_net" }
mm2_number = { path = "../mm2_number" }
mm2_rpc = { path = "../mm2_rpc" }
kdf_walletconnect = { path = "../kdf_walletconnect" }
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
regex = "1"
rpc = { path = "../mm2_bitcoin/rpc" }
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
uuid = { version = "1.2.2", features = ["fast-rng", "serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["wasmbind"] }
gstuff = { version = "0.7" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.41", default-features = false }
gstuff = { version = "0.7" }
