[package]
name = "proxy_signature"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono.workspace = true
http.workspace = true
libp2p = { workspace = true, features = ["identify"] }
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }

[dev-dependencies]
rand = { workspace = true, features = ["std", "small_rng"] }
